--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
 </head>
 <body>
     <h1>三目並べ</h1>
+    <div class="board">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
 </body>
 </html>
