--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <h1>三目並べ</h1>
     <div class="board">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div id="A"></div>
+        <div id="B"></div>
+        <div id="C"></div>
+        <div id="D"></div>
+        <div id="E"></div>
+        <div id="F"></div>
+        <div id="G"></div>
+        <div id="H"></div>
+        <div id="I"></div>
     </div>
 </body>
 </html>
